# ugeo_back

./: .gitignore  alembic.ini  database.py  docker-compose.yaml  main.py  models.py  pyproject.toml  run.Dockerfile  run.sh  test-docker-compose.yaml  test.sh  user.py
.github/workflows/: docker-build.yaml
config/: const.py
migrations/: env.py
migrations/versions/: 1df6f8f386dc_.py  1e13b42bfe86_.py  2a5a871d0401_.py  6949bfb9016b_.py  7c0e8aec380e_.py  7ec03ee0cca3_.py  995fc95b2a5d_.py  a13e72c4f486_.py  c27876e99e84_.py  da7c3d9052f7_.py  e36c3b35bbc6_.py
router/: article.py  comment.py  user.py
service/: article.py  comment.py  user.py
tests/: conftest.py  test_ugeo.py  test_user.py
ugeougeo/: alembic.ini  database.py  main.py  models.py
ugeougeo/config/: env.py
ugeougeo/migrations/: env.py
ugeougeo/migrations/versions/: 7c0e8aec380e_.py  a13e72c4f486_.py
ugeougeo/router/: article.py  comment.py  follow.py  user.py
ugeougeo/service/: article.py  comment.py  follow.py  user.py
ugeougeo/validation/: user.py
